Closed Bug 346167 Opened 19 years ago Closed 19 years ago

Windows MediaPlayer plugin stopped working on specific website with FF 1.5.0.5 (mms)

Categories

(Core Graveyard :: Plug-ins, defect)

Other Branch
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mcsmurf, Assigned: sicking)

References

()

Details

(Keywords: regression, verified1.8.0.6, verified1.8.1)

Attachments

(1 file, 1 obsolete file)

To reproduce: 1. Fetch Firefox 1.5.0.5 2. Go to http://news.orf.at/video/iptvpopup.html?lebanon_khiam_a.wmv Actual results: No Windows MediaPlayer plugin can be observed, no video is played Expected results: You should see a video playing there with the Windows MediaPlayer plugin This worked fine in Firefox 1.5.0.4
Version: Trunk → 1.8 Branch
Version: 1.8 Branch → Other Branch
Presumably broken on 1.8 branch too, though we should test that
Flags: blocking1.8.1?
This is a regression from bug 181860. The page fails because it uses the 'mms' protocol, which we consider external and block.
Attached patch Patch to fixSplinter Review
The problem here is that we don't do the loading, so a larger array of protocols are ok and don't neccesarily cause launching of external apps. The fix is very simple in that it simply allows object-urls to point to anything. The big question here is of course, should we do a quick 1.5.0.6 release to fix this? The regression will cause any external protocols to be blocked even for plugins. This includes things like 'mms' for WMP and 'rm' for real. But I don't really know how common they are. But I suspect they are common enough that we need to fix this ASAP
Assignee: nobody → bugmail
Status: NEW → ASSIGNED
Attachment #231005 - Flags: superreview?(bzbarsky)
Attachment #231005 - Flags: review?(bzbarsky)
Comment on attachment 231005 [details] [diff] [review] Patch to fix Yeah, this will basically break all WMP objects... :( We should probably at least consider doing a 1.8.0.6 to fix this; please mail the 1.8.0 branch drivers about it? Please add a comment explaining why we let through TYPE_OBJECT (and I agree with the reasoning, btw -- we only AsyncOpen channels for plug-ins if we have a protocol handler for them), and looks good.
Attachment #231005 - Flags: superreview?(bzbarsky)
Attachment #231005 - Flags: superreview+
Attachment #231005 - Flags: review?(bzbarsky)
Attachment #231005 - Flags: review+
*** Bug 346057 has been marked as a duplicate of this bug. ***
*** Bug 344859 has been marked as a duplicate of this bug. ***
For what it's worth, this patch was shipped in FF 2.0 Beta 1 and no-one has filed a bug on it yet.
(In reply to comment #8) > For what it's worth, this patch was shipped in FF 2.0 Beta 1 and no-one has > filed a bug on it yet. Bug 344859 was filed against b1/trunk.
Fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
*** Bug 346060 has been marked as a duplicate of this bug. ***
In case you cannot reproduce the bug anymore with the testcase from the URL, try Attachment 229399 [details] for an alternative testcase.
*** Bug 346286 has been marked as a duplicate of this bug. ***
Summary: Windows MediaPlayer plugin stopped working on specific website with FF 1.5.0.5 → Windows MediaPlayer plugin stopped working on specific website with FF 1.5.0.5 (mms)
Flags: blocking1.8.1? → blocking1.8.1+
Attachment #231005 - Flags: approval1.8.0.6+
Attachment #231005 - Flags: approval1.8.1?
Attachment #231005 - Flags: approval1.8.0.6?
Attachment #231005 - Flags: approval1.8.0.6+
Comment on attachment 231005 [details] [diff] [review] Patch to fix approved for 1.8.0 branch, a=dveditz
Attachment #231005 - Flags: approval1.8.0.7? → approval1.8.0.6+
here is a Resolution: If you use mms://server/path/mediafile in FF1.5.0.5 in <OBJECT>, it will not work, you should change to use http://server/path/mediafile.asx, this is work. How to convert mms to http: here is a example using PHP code: file: test.asx.php <? Header("Content-Type: video/x-ms-asf"); $url = $_SERVER["QUERY_STRING"]; ?> <ASX Version="3.0"> <ENTRY> <REF href="mms://mmsserver/<?=$url?>"/> </ASX>
For testing, the big thing to test here is anything that concerns external protocols. This includes plugins that use custom streaming protocols like 'mms' or 'rm'. It also includes things like 'mailto' links that are supposed to open apps when clicked. And any other context where external protocols can be used that you can think of. The patch is supposed to block external protocols from image, script, stylesheet and xbl load, but testing all those areas are hard and is going to suck up a lot of time. So I think it's more important to focus on testing external protocols whereever we can think of them.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1b1) Gecko/20060728 BonEcho/2.0b1 - Build ID: 2006072803 I have tried this link http://www.milaadesign.com/wizardy.html in normal mode and safe mode and nothing happens. Does not ask for any plug-in just will not load. I open it in IE and it works fine. Not sure if this branch Issue is effected by this bug or not just giving another web link to look at.
reports are that http://mlb.com streaming video is broken in 1.5.0.5. that might be another good test case for builds with the patch.
(In reply to comment #17) > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1b1) Gecko/20060728 > BonEcho/2.0b1 - Build ID: 2006072803 > > I have tried this link http://www.milaadesign.com/wizardy.html in normal mode > and safe mode and nothing happens. Does not ask for any plug-in just will not > load. I open it in IE and it works fine. Not sure if this branch Issue is > effected by this bug or not just giving another web link to look at. > that site WFM with the stated build and it works in 1.5.0.5.
Flags: blocking1.8.0.7? → blocking1.8.0.6+
*** Bug 346395 has been marked as a duplicate of this bug. ***
*** Bug 346488 has been marked as a duplicate of this bug. ***
Patch has been checked in on MOZILLA_1_8_0_BRANCH at 2006-07-28 12:20.
Keywords: fixed1.8.0.6
Comment on attachment 231005 [details] [diff] [review] Patch to fix approved by schrep for drivers
Attachment #231005 - Flags: approval1.8.1? → approval1.8.1+
*** Bug 346566 has been marked as a duplicate of this bug. ***
Attached patch Patch (obsolete) — Splinter Review
Comment on attachment 231346 [details] [diff] [review] Patch dude how do i get it to work
ok so i see the string can u tell me what to do with it
Attachment #231346 - Attachment is obsolete: true
Is this a MacOS bug as well. I cannot view anything at the test page above after the logo at the top of the page. MacOS 10.3.9 and SeaMonkey 1.0.3
*** Bug 346720 has been marked as a duplicate of this bug. ***
WFM now with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060801 Minefield/3.0a1 v.
Status: RESOLVED → VERIFIED
OS: Windows 2000 → All
Hardware: PC → All
Still broken for me. ASX files which call either MMS or HTTP streams result in a blank browser window with no external or embedded player launched. If a WMV file is directly linked I get the "This protocol requires an external application to be launched. Do you want to launch this app.." This will launch whichever the default player is specified as the default player for that file extension and successfully play video. However, if it's an ASX file launching the video...Nothing. See this thread http://forums.mozillazine.org/viewtopic.php?t=441848 for some more examples. The NoScript extension and ActiveX plugin are suspected as potential issues involved but with or without those items the behavior is still inconsistent and broken.
sorry, here's my build ID Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060809 Minefield/3.0a1 (bangbang023) ID:0000000000 [cairo]
Jason: It sounds like you're running into a different bug. Did the same pages work in 1.5.0.4? If not then please file a new bug.
*** Bug 348525 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: