Bug 346167: Unregress WMP plugins that uses the 'mms' protocol. r/sr=bz